[project]
name = "guesser-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.46.0",
    "pydantic-settings>=2.9.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
]
