[tool.poetry]
name = "guesser-bot"
version = "0.1.0"
description = ""
authors = ["w1vern <bndvvl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.40"
minio = "^7.2.15"
redis = "^5.2.1"
aiogram = "^3.20.0.post0"
isort = "^6.0.1"
alembic = "^1.15.2"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
fast-depends = "^2.4.12"


[tool.poetry.group.dev.dependencies]
fakeredis = "^2.28.1"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
